--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -2,5 +2,5 @@
 
 {% block header_text %}Start a new To-Do list{% endblock %}
 
-{% block from_action %}/lists/new{% endblock %}
+{% block form_action %}/lists/new{% endblock %}
 
